# zephyr-getting-started-lw

./: .clang-format  .gitignore  README.md  environment.cmake  paths.cmake  west.yml
applications/blinky/: prj.conf
applications/blinky/src/: main.c
applications/hello_equal/: CMakeLists.txt  README.md
applications/hello_equal/app/: CMakeLists.txt  main.c
applications/hello_equal/lib/: CMakeLists.txt  equal_checker.h
applications/hello_equal/lib/equal_checker/: CMakeLists.txt  equal_checker.c
applications/hello_equal/src/: main.c
